# mssql

./: .gitignore  .mssql_history  .travis.yml  Makefile.in  README.md  TODO.md  blog.txt  configure  configure.ac  configure.in  db.c  db_old.c  history.c  makefile  mssql  mssql.c  mssql.h  option.c  prompt.c  sample.c  test.c  usage.c
Debug/: makefile
src/: LICENSE  Makefile.am  Makefile.in  configure  configure.in  datasource.c  db.c  dbresult.c  display.c  makefile  mssql.c  mssql.h  option.c  output.c  queryfilter.c  trans.c  usage.c  utils.c
src/services/: service.c
src/slre/: hoge  hoge.c  makefile
test/: Makefile  queryfilter.cpp  test.h  test_suite.sh  trans.cpp  utils.cpp
